<?xml version="1.0" encoding="utf-8"?>
<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:id="@+id/scrollView"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorPrimaryDark">

    <LinearLayout
        android:id="@+id/mainLayout"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingHorizontal="20dp">

            <TextView
                android:id="@+id/timeTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="false"
                android:text="@string/_12_n00"
                android:textColor="#ffffff"
                android:textSize="60sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/dateTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/day_date"
                android:textSize="15sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">


            <ImageView
                android:id="@+id/backgroundImg"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:contentDescription="@string/image" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingStart="100dp"
                tools:ignore="RtlSymmetry">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="15dp"
                    android:text="@string/a_quote"
                    android:textColor="#ffffff"
                    android:textSize="50sp" />

                <TextView
                    android:id="@+id/quoteTxt"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:paddingBottom="5dp"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/quoteAuthorTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:textStyle="bold|italic" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingStart="100dp"
                tools:ignore="RtlSymmetry">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="15dp"
                    android:text="@string/your_intention"
                    android:textColor="#ffffff"
                    android:textSize="50sp" />

                <EditText
                    android:id="@+id/intentionTxt"
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/layout_background"
                    android:hint="@string/enter_a_goal_like_be_happy"
                    android:padding="10dp"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:maxLength="40"
                    android:importantForAutofill="no" />

                <LinearLayout
                    android:id="@+id/intentionNotice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone">
                    <TextView
                        android:layout_width="350dp"
                        android:layout_height="wrap_content"
                        android:text="@string/press_the_done_enter_button_to_save"
                        android:textColor="#ffffff"
                        android:textSize="12sp" />
                    <Button
                        android:id="@+id/saveBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/colorPrimaryDark"
                        android:textAllCaps="false"
                        android:layout_margin="2dp"
                        android:text="@string/save_msg" />
                </LinearLayout>

                <CheckBox
                    android:id="@+id/notifBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp"
                    android:text="@string/persistent_notification" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingStart="100dp"
                android:paddingEnd="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="15dp"
                    android:text="@string/app_name"
                    android:textColor="#ffffff"
                    android:textSize="50sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/thank_you_for_using_this_app"
                    android:textSize="20sp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:orientation="vertical"
                        tools:ignore="UselessParent">

                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/refreshBtn"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:background="#000000"
                            android:paddingBottom="10dp"
                            android:text="@string/refresh"
                            android:textAllCaps="false"
                            android:textSize="20sp" />

                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/imageCategoryBtn"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:background="#000000"
                            android:paddingBottom="10dp"
                            android:text="@string/image_category"
                            android:textAllCaps="false"
                            android:textSize="20sp" />

                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/appInfoBtn"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:background="#000000"
                            android:paddingBottom="10dp"
                            android:text="@string/app_info"
                            android:textAllCaps="false"
                            android:textSize="20sp" />
                    </LinearLayout>
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</HorizontalScrollView>


